# gastown-workshop

./: .gitignore  README.md  pyproject.toml
docs/: appendix-common-errors.md  appendix-quick-reference.md  design.md  initial-plan.bead.md  module-00-mental-model.md  module-01-first-bead.md  module-01-idea-to-beads.md  module-02-dependency-chain.md  module-02-first-bead.md  module-03-dependency-chain.md  module-03-parallel-lanes.md  module-04-convoy-launch.md  module-04-parallel-lanes.md  module-05-convoy-launch.md  module-05-full-pipeline.md  module-06-full-pipeline.md  module-06-recovery.md  module-07-recovery.md  product-brief.md  setup.md
weatherly/: __init__.py  config.py
