[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "weatherly"
version = "0.1.0"
description = "A CLI weather dashboard — built step by step with Gas Town"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
weatherly = "weatherly.__main__:main"
